test/sema/ambiguous-call-with-overloaded-params.delta
// RUN: %check_errors %not %delta -typecheck %s

void foo(a: int) { }
void foo(b: int) { }

void main() {
    // CHECK: [[@LINE+6]]:5: error: ambiguous reference to 'foo'
    // CHECK: 3:6: note: candidate function:
    // CHECK-NEXT: void foo(a: int) { }
    // CHECK: 4:6: note: candidate function:
    // CHECK-NEXT: void foo(b: int) { }
    // CHECK-NOT: note
    foo(1)
}
